--- a/assets/ifpg.css
+++ b/assets/ifpg.css
@@ -26,13 +26,28 @@
 }
 
 .mbdb-array-add-item-button {
-    width: 10rem;
+    width: 12rem;
+}
+
+.mbdb-array-add-item-button-inner {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    gap: var(--mbdb-hgap);
+}
+
+.mbdb-array-add-item-button-plus {
+    font-weight: bold;
+    font-size: var(--mbdb-font-large);
 }
 
 .mbdb-array-add-item-button-tainer {
     display: flex;
     flex-direction: row;
     justify-content: start;
+}
+
+.mbdb-array-add-item-button-title {
 }
 
 .mbdb-array-complex-header {
