--- a/assets/ifpg.css
+++ b/assets/ifpg.css
@@ -22,6 +22,12 @@
     --mbdb-clr-frames: #ccc;
 }
 
+.mbdb-app-tainer {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+
 .mbdb-array-tainer {
 }
 
@@ -88,6 +94,12 @@
 
 .mbdb-form-nav-link-highlighted {
     text-decoration: underline;
+}
+
+.mbdb-form-root {
+    display: flex;
+    flex-direction: column;
+    gap: var(--mbdb-2hgap);
 }
 
 .mbdb-help-popup-trigger {
