--- a/assets/ifpg.css
+++ b/assets/ifpg.css
@@ -15,7 +15,7 @@
     --mbdb-2vgap: calc(2 * var(--mbdb-vgap));
     --mbdb-v2gap: calc(0.5 * var(--mbdb-vgap));
 
-    --mbdb-form-pad: 10px;
+    --mbdb-form-pad: var(--mbdb-2hgap);
 
     --mbdb-anim-speed: 200ms;
 
@@ -56,12 +56,16 @@
 .mbdb-array-add-item-button-title {
 }
 
+.mbdb-array-collapsible-tainer {
+    grid-column: 1 / 3;
+    padding-left: var(--mbdb-form-pad);
+}
+
 .mbdb-array-complex-header {
     align-items: center;
     display: flex;
     flex-direction: row;
     gap: var(--mbdb-hgap);
-    grid-column: 1 / 3;
     justify-content: end;
 }
 .mbdb-array-complex-header-line {
@@ -72,6 +76,18 @@
 .mbdb-array-complex-header-title {
     font: var(--mbdb-font-large);
     font-weight: bold;
+}
+
+.mbdb-collapsible-tainer {
+    display: flex;
+    flex-direction: column;
+}
+
+.mbdb-collapsible-header-tainer {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    gap: var(--mbdb-2hgap);
 }
 
 .mbdb-form-nav-list-item-title {
