Mark item and section labels as requried, where applicable

--- a/assets/ifpg.css
+++ b/assets/ifpg.css
@@ -152,14 +152,18 @@
     font-size: var(--mbdb-font-normal);
 }
 
-.mbdb-variant-selection-tainer {
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    gap: var(--mbdb-form-pad);
-    /* padding cannot be negative so we have to use a crutch with margins */
-    margin-bottom: calc(-1 * var(--mbdb-form-pad));
-    margin-top: calc(-1 * var(--mbdb-form-pad));
+.mbdb-field-is-required-marker {
+    font-size: var(--mbdb-font-tiny);
+    margin-left: var(--mbdb-h2gap);
+    vertical-align: super;
+}
+
+.mbdb-field-is-required-marker-item {
+    color: #777;
+}
+
+.mbdb-field-is-required-marker-section {
+    color: black;
 }
 
 .mbdb-section {
@@ -182,6 +186,16 @@
 .mbdb-section-label-text {
     font-size: var(--mbdb-font-normal);
     font-weight: bold;
+}
+
+.mbdb-variant-selection-tainer {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    gap: var(--mbdb-form-pad);
+    /* padding cannot be negative so we have to use a crutch with margins */
+    margin-bottom: calc(-1 * var(--mbdb-form-pad));
+    margin-top: calc(-1 * var(--mbdb-form-pad));
 }
 
 .mbdb-voc-entry-detail-name {
