--- a/assets/ifpg.css
+++ b/assets/ifpg.css
@@ -188,9 +188,7 @@
     flex-direction: column;
     gap: var(--mbdb-vgap);
     grid-column: span 2;
-    padding-left: var(--mbdb-form-pad);
-    padding-top: var(--mbdb-form-pad);
-    padding-bottom: var(--mbdb-form-pad);
+    padding: var(--mbdb-form-pad);
 }
 
 .mbdb-section-has-errors {
