--- a/assets/input-form.css
+++ b/assets/input-form.css
@@ -10,6 +10,7 @@
 
     --mbdbi-hgap: 0.5rem;
     --mbdbi-2hgap: calc(2 * var(--mbdbi-hgap));
+    --mbdbi-3hgap: calc(3 * var(--mbdbi-hgap));
     --mbdbi-h2gap: calc(0.5 * var(--mbdbi-hgap));
     --mbdbi-vgap: 0.5rem;
     --mbdbi-2vgap: calc(2 * var(--mbdbi-vgap));
@@ -130,7 +131,8 @@
     background: none;
     display: flex;
     flex-direction: row;
-    gap: var(--mbdbi-h2gap);
+    padding: 0.25rem;
+    font-size: 1rem;
 
     transition: background-color var(--mbdbi-anim-speed);
 }
@@ -141,9 +143,11 @@
 
 .mbdbi-form-nav-link {
     color: black;
+    cursor: pointer;
     font-weight: bold;
     padding-right: var(--mbdbi-hgap);
 }
+
 .mbdbi-form-nav-link:hover {
     color: var(--mbdbi-clr-based3);
 }
@@ -231,9 +235,6 @@ ul.mbdbi-deposition-error-report {
     display: flex;
     flex-direction: row;
     gap: var(--mbdbi-hgap);
-}
-
-.mbdbi-input-tainer {
 }
 
 .mbdbi-item-grid {
@@ -326,4 +327,36 @@ ul.mbdbi-deposition-error-report {
 
 .mbdbi-voc-entry-title {
     font-weight: bold;
+}
+
+.mbdbi-nested-content {
+    display: flex;
+    justify-content: space-around;
+    margin: auto;
+    color: #4A4A4A;
+}
+
+.mbdbi-nested-title {
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+}
+
+.mbdbi-nested-items {
+    display: flex;
+    justify-content: center;
+    margin: 0.5rem;
+}
+
+.mbdbi-nested-item {
+    margin: 0.5rem;
+    cursor: pointer;
+    font-size: 1.5rem;
+    user-select: none;
+}
+
+.mbdbi-form-nav-link-block {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
