Fix layout of the demo app

--- a/assets/input-form.css
+++ b/assets/input-form.css
@@ -34,8 +34,9 @@
 
 .mbdbi-app-tainer {
     display: flex;
+    flex: 1;
     flex-direction: column;
-    height: 100vh;
+    overflow-y: scroll;
 }
 
 .mbdbi-array-tainer {
