--- a/assets/input-form.css
+++ b/assets/input-form.css
@@ -128,6 +128,17 @@
     color: black;
 }
 
+.mbdbi-file-input-controls {
+    display: grid;
+    column-gap: var(--mbdbi-hgap);
+    grid-template-columns: 20em 7em 7em 1fr;
+
+}
+
+.mbdbi-file-input-controls-wide {
+    grid-column: 1 / 3;
+}
+
 .mbdbi-form-nav-list-item-title {
     background: none;
     display: flex;
