--- a/assets/input-form.css
+++ b/assets/input-form.css
@@ -404,6 +404,7 @@ ul.mbdbi-deposition-error-report {
     font-size: 1.15rem;
     padding: 1.75rem 1.25rem;
     height: 4.5rem;
+    box-shadow: 1px 10px 50px -10px rgba(0,0,0,0.30);
 }
 
 .inline {
